# freeIMU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
FreeIMU_GUI/FreeIMU_GUI/: cal_gui.py
libraries/FreeIMU/: CommunicationUtils.cpp  FreeIMU.cpp  FreeIMU.h  calibration.h
libraries/FreeIMU/examples/FreeIMU_serial/: FreeIMU_serial.ino
libraries/HMC58X3/: HMC58X3.cpp
libraries/I2Cdev/: I2Cdev.cpp
processing/FreeIMU_cube/: FreeIMU_cube.pde
